--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.immutables:value:2.7.4'
     implementation 'org.immutables:gson:2.7.4'
+    implementation 'joda-time:joda-time:2.10.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
